k8s/base/omni-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-tools
  labels:
    app: omni-tools
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: omni-tools
