k8s/base/omni-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-tools
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: public
  rules:
  - host: tools.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omni-tools
            port:
              number: 80
